# cttc-auto-learn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SKILL.md  cdp_auto_learn.py  cttc-auto-learn.user.js  main.py  pyproject.toml  pytest.ini  qr-gen
.github/workflows/: changelog.yml  release.yml
SKILLS/cttc-auto-learn/: SKILL.md
cttc/: __init__.py  api.py  config.py  course.py  data_manager.py  logger.py  login.py  modes.py  monitor.py  planner.py  player.py  process_manager.py  progress.py  qr.py  selectors.py  status.py  ui.py
docs/analysis/: ANTI-CHEAT-ANALYSIS.md
docs/crawl/: API-FULL-CATALOG.md  BRANCHES-AND-ZONES.md  FINAL-REPORT.md  report.md
output/: API-ANALYSIS.md  NETWORK-ANALYSIS.md  qr-refreshed.txt
output/crawl/: FULL-REPORT.md  api-catalog.json  api-deep-explore.json  branches-zones.json  link-graph.json  page-api-map.json  pages.json  sitemap.txt  zone-api-calls.json  zones-subjects.json
output/crawl/branches/: REPORT.md  all-subjects.json  api-catalog.json  api-requests.json  summary.json  专卖分院.json  (+12 more)
scripts/: add_mosaic.py  cdp_login_analyzer.py  check_token.py  crawl_site.py  monitor.py  refresh_credentials.py  restore_from_profile.py  take_screenshots.py
scripts/explore/: api_explore.py  crawl_branches.py  crawl_site.py  explore_branches.py  explore_zones.py
tests/: conftest.py  test_config.py  test_course.py  test_e2e.py  test_logger.py  test_login.py  test_main.py  test_modes.py  test_monitor.py  test_planner.py  test_player.py  test_progress.py  test_qr.py  test_study_time_increase.py  test_ui.py
